# dotfiles

./: .gitignore  .spacemacs  .zshrc  bootstrap.sh  bootstrap.zsh  brewfile  flatpaks  flatpaks-gaming  home.nix  pyproject.toml  readme.md  setup.sh
.config/albert/: config
.config/ghostty/: config  config.toml
.config/git/: .gitconfig
.config/hammerspoon/: init.lua
.config/k9s/: aliases.yaml  config.yaml
.config/k9s/skins/: dracula.yaml
.config/lvim/: config.lua
.config/nixpkgs/: home.nix
.config/nixpkgs/darwin/: flake.nix  home.nix
.config/nushell/: config.nu  env.nu  history.txt
.config/nushell/nushell/: config.nu
.config/nvim/: init.lua  lazy-lock.json  lazyvim.json
.config/scripts/: albert_setup.zsh  bootstrap.zsh  brew_setup.zsh  dns_setup.zsh  flatpak_setup.zsh  fonts_setup.zsh  gaming_setup.zsh  ghostty_setup.zsh  gnome_setup.zsh  health_check.zsh  lazyvim_setup.zsh  lib_os.zsh  nvim_setup.zsh  post_bootstrap_checks.zsh  shell_setup.zsh  warp_setup.zsh
.config/starship/: starship.toml
dconf/: dash-to-dock.conf  tilingshell.conf
nvim/: init.lua
nvim/lua/: command_table.lua  lsp.lua  nvimtreeview.lua  theme.lua
nvim/plugin/: packer_compiled.lua
nvim/wsl/: .wslconfig
scripts/: bootstrap.sh  brew_setup.sh  lazyvim_setup.sh  post_bootstrap_checks.sh
src/dotfiles/: __init__.py  __main__.py  bootstrap.py
src/dotfiles/config/: __init__.py  settings.py
src/dotfiles/services/: __init__.py  albert.py  checks.py  dns.py  flatpak.py  fonts.py  gaming.py  ghostty.py  git_ssh.py  (+6 more)
tests/: __init__.py  test_platform.py  test_settings.py
(+22 files in other folders)
